<resources>
    <string name="app_name">Fertility Test Analyzer</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="camera_not_found">Camera not found.</string>
    <string name="camera_access_error">Camera access error.</string>
    <string name="notify_title">Fertility Test Analyzer</string>
    <string name="notify_ok">OK</string>
    <string name="new_test">New Test</string>
    <string name="my_tests">My Cycles</string>
    <string name="my_cycles">Charts</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="desc_new_test">Create a new test</string>
    <string name="desc_my_tests">List of my cycles, my tests and their characteristics</string>
    <string name="desc_my_cycles">Pigmentation chart of my cycles</string>
    <string name="desc_information">Information about fertility and conception</string>
    <string name="desc_settings">App settings</string>
    <string name="desc_help">App help</string>
    <string name="home_msg_title">¡Thank you for downloading Fertility Test Analyzer!</string>
    <string name="home_msg_content">This app helps you interpret ovulation and pregnancy test strips
        of any trademark. If you don\'t have them yet, you can easily buy them in on-line stores.</string>
    <string name="title_new_test">New Test</string>
    <string name="err_dark">The image is too dark</string>
    <string name="title_test_verification">Test Verification</string>
    <string name="title_test_edition">New Test</string>
    <string name="pigmentation">Pigmentation</string>
    <string name="test_type">Test Type</string>
    <string name="test_interpretation">Test Interpretation</string>
    <string name="select_test">Please select one test.</string>
    <string name="test_date">Test Date</string>
    <string name="text_cycle">Cycle</string>
    <string name="text_new_cycle">New Cycle</string>
    <string name="cycle_help">The cycle date corresponds to the <b>first day of your period</b>.
      It can be changed later.</string>
    <string name="brand">Brand</string>
    <string name="brand_hint">Write the test brand here</string>
    <string name="note">Note</string>
    <string name="note_hint">Add your notes here</string>
    <string name="open_img">Open test picture</string>
    <string name="not_pregnant"><b>Not pregnant</b>\nThe pigmentation of the test line is lower than the
      threshold value for pregnancy (5%).</string>
    <string name="pregnant"><b>Pregnant!</b>\nCongratulations, the pigmentation of the test line is equal or higher than
      the threshold value for pregnancy (5%).</string>
    <string name="ovulating"><b>On your fertile window</b>\nThe pigmentation of the test line is equal
      or higher than the pigmentation of the control line. Ovulation is likely to happen in the next
      three days.</string>
    <string name="not_ovulating"><b>Not entering your fertile window</b>\nThe pigmentation of the test
      line is lower than the pigmentation of the control line. Ovulation is not likely to happen in the
      next days.\n
      However, you could be on your fertile window if you have obtained a positive ovulation test three
      or less days ago.</string>
    <string name="ovulation">Ovulation</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="title_my_tests">My Cycles</string>
    <string name="cycle_days">%1$d days</string>
    <string name="cycle_header">Cycle %1$s</string>
    <string name="pigment_percent">%1$d%%</string>
    <string name="title_my_cycles">Charts</string>
    <string name="chart_pigmentation">% pigmentation</string>
    <string name="chart_days">Day of cycle</string>
    <string name="chart_cycle">Cycle: %1$s</string>
    <string name="chart_cycles">Comparison of %1$d cycles</string>
    <string name="chart_title">CYCLES COMPARISON CHART</string>
    <string name="chart_list_title">List of my cycles</string>
    <string name="chart_list_expl">Tap the cycle to add it to or remove it from the chart.</string>
    <string name="chart_long_cycles">Cycles too long slow down the chart considerably.</string>
    <string name="title_cycle_edition">Cycle Beginning Date</string>
    <string name="title_date_selection">Date Selection</string>
    <string name="delete_cycle_title">Delete a Cycle</string>
    <string name="delete_empty_cycle_message">Are you sure that you want to delete this cycle?</string>
    <string name="delete_first_cycle_message">You are about to delete the first recorded cycle. If you
      continue, the tests of this cycle will be deleted as well.\n
      Do you really want to continue?</string>
    <string name="delete_cycle_message">You are about to delete a cycle. What do want to do with its tests?\n
      Merge all the tests of this cycle with the previous one.\n
      Delete the cycle and its tests.</string>
    <string name="delete_test_title">Delete this test</string>
    <string name="delete_test_message">You\'ll lose all the test\'s information!</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_merge">Merge Tests</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_no">Cancel</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_new_test">New Test</string>
    <string name="navbar_my_tests">My Cycles</string>
    <string name="navbar_my_cycles">Charts</string>
    <string name="navbar_information">Information</string>
    <string name="navbar_app">Application</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_help">Help</string>
    <string name="navbar_about">About</string>
    <string name="share_text">Check out this fertility app!! %1$s</string>
    <string name="share_title">Share app with...</string>
    <string name="share_error">Error found opening the URI.</string>
    <string name="subtitle_actionbar">HELPING WOMEN THROUGHOUT THE WORLD</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_saving_pict">Enable saving test pictures</string>
    <string name="pref_saving_expl">Associated test data is saved anyway</string>
    <string name="pref_export_import">Export/Import data</string>
    <string name="pref_export">Export</string>
    <string name="pref_import">Import</string>
    <string name="pref_import_expl">If you want to export/import your photos, remember to copy them from the pictures folder shown below.</string>
    <string name="pref_open_dir">Open directory</string>
    <string name="pref_permision_denied">Permission denied, your data could not be exported.</string>
    <string name="pref_permision_needed">Permission Needed</string>
    <string name="pref_permision_expl">You have to grant write access to your SD card if you want to export your data to a file.</string>
    <string name="pref_export_error">Error exporting the data.</string>
    <string name="pref_send_file">Send file.</string>
    <string name="pref_import_confirm_title">Your data will be lost!</string>
    <string name="pref_import_confirm_message">You have data in the app that will be lost if you continue the importation.
        \nDo you really want to continue?</string>
    <string name="pref_continue">Continue</string>
    <string name="pref_select_csv">Select a file to import</string>
    <string name="pref_import_error">Error importing the data.</string>
    <string name="pref_import_ok">Data imported successfully.</string>
    <string name="pref_usability">Usability</string>
    <string name="pref_torch">Enable using flash during autofocus when it is dark </string>
    <string name="pref_torch_expl">Flash helps the camera with focus, but it will not be forced to be on
      during image acquisition</string>
    <string name="pref_notes">Enable visibility of test notes</string>
    <string name="pref_notes_expl">If you want test notes to be always visible in My Cycles tests list</string>
    <string name="pref_camera">Show again the camera tips</string>
    <string name="pref_camera_expl">If you want the information to be visible the next time you take a picture</string>
    <string name="pref_date_format">Date format</string>
    <string name="pref_date_format_dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="pref_date_format_mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="pref_information">Information</string>
    <string name="pref_ovulation_brand">Default ovulation test brand</string>
    <string name="pref_brand_hint">Write the brand here</string>
    <string name="pref_pregnancy_brand">Default pregnancy test brand</string>
    <string name="pref_display_preg_brand">Write the brand here</string>
    <string name="pref_version">Version</string>
    <string name="pref_dev_mode">Developer mode</string>
    <string name="pref_dev_mode_expl">Enable advanced options for developers.</string>
    <string name="pref_clear_title">Reset settings</string>
    <string name="pref_clear">Click here to clear all the preferences.</string>
    <string name="pref_reset">All preferences reset.</string>
    <string name="info_title_teststrips">Test Strips</string>
    <string name="info_teststrips">A test strip is a basic and inexpensive diagnostic tool which is used to determine hormonal changes in a person\'s
        urine. It has a chemical pad that reacts with the urine, changing color, when is immersed in during a certain period of time (usually
        a few seconds).\n\nSome test strips are used to predict when a woman is going to ovulate –Ovulation Tests– and others are used to
        determine if she is pregnant –Pregnancy Tests–.</string>
    <string name="info_title_ovulation">Ovulation Test Strips</string>
    <string name="info_ovulation1">Either if you are trying to get pregnant or are trying to prevent pregnancy, Ovulation Tests are very useful
        to find your fertile days. Unlike temperature charting, which tells when you have ovulated, these tests help you predict in advance the time of
        ovulation and peak fertility.\n\n
        Each month your body increases the production of Luteinizing Hormone (LH) halfway through the cycle
        which causes the releasing of an egg (ovulation). When the test shows a positive result, it means that ovulation will happen in
        the next three days. Pregnancy is technically only possible from five days before ovulation to the day of ovulation.</string>
    <string name="cam_alert_message">Place the test strip inside the mask on a white surface</string>
    <string name="cam_alert_button">OK</string>
    <string name="dont_show_again">Don\'t show again.</string>
    <string name="cam_save_on">Save Picture</string>
    <string name="cam_low_res">The detection of the line has failed.
        \nYou can click the RECALCULATE button to process the image in Low
         Precision Mode (less accurate than Normal Mode) or discard the image and try again.</string>
</resources>