<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_camera_explanation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/buttonMargin"
        android:paddingTop="@dimen/buttonMargin"
        android:text="@string/cam_alert_message"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteText"
        android:textSize="@dimen/sizeHelpTitle"
        android:id="@+id/textView"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/cam_expl"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/check_dont_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/dont_show_again"
            android:textSize="@dimen/sizeTextTitle"
            android:layout_margin="8dp"
            app:buttonTint="@color/colorPrimaryLight"
            android:textColor="@color/colorWhiteText" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_alert_button"
            android:backgroundTint="@color/colorPrimaryLight"
            android:padding="10dp"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>
