<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/sizeTextTitle"
            android:text="@string/cam_low_res" />

        <ImageButton
            android:id="@+id/btn_recalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0"
            android:background="@drawable/selector_circular_button"
            android:elevation="2dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/ico_lowres" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <CheckBox
            android:id="@+id/check_dont_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/dont_show_again"
            android:textSize="@dimen/sizeTextTitle"
            android:layout_margin="8dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cam_alert_button"
            android:textSize="@dimen/sizeTextTitle"
            android:padding="8dp"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>
</LinearLayout>