<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="0dp"
    tools:context=".TestVerificationActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <com.colnix.fta.StripPlaceholderView
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorDialogBg"
        android:padding="10dp"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp" >

        <CheckBox
            android:id="@+id/check_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/save_button"
            android:gravity="top"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:text="@string/cam_save_on"
            android:textColor="@color/colorWhiteText" />

    </LinearLayout>

    <TextView
        android:id="@+id/msg_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="10dp"
        android:background="@drawable/box_bg"
        android:text="@string/pigmentation"
        android:textColor="@color/colorWhiteText"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/msg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="16dp"
        android:background="@drawable/box_bg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ico_warning_white" />

        <TextView
            android:id="@+id/msg_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/box_bg"
            android:text="@string/err_dark"
            android:textColor="@color/colorWhiteText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0"
            android:background="@drawable/selector_circular_button"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="16dp"
            android:src="@drawable/ico_ok" />

        <ImageButton
            android:id="@+id/btn_low_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0"
            android:background="@drawable/selector_circular_button"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="16dp"
            android:src="@drawable/ico_lowres" />

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0"
            android:background="@drawable/selector_circular_button"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="16dp"
            android:src="@drawable/ico_clear" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>
